# thaisperlho

./: 404.html  README.md  db.db  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml  snake.yml
api/api1/: index.html
css/: extras.css  variables.css
docs/: index.md
docs/api/: api1.md
docs/css/: extras.css  variables.css
docs/js/: custom.js  termynal.js
docs/projetos/: EncontrandoCaramelos.md  Nera.md  PesquisaDePrecios.md  PesquisaDeProdutos.md  SoccerNews.md  projeto1.md  projeto2.md  projeto3.md
projetos/EncontrandoCaramelos/: index.html
projetos/PesquisaDeProdutos/: index.html
projetos/SoccerNews/: index.html
projetos/projeto1/: index.html
projetos/projeto2/: index.html
projetos/projeto3/: index.html
search/: search_index.json
