[tool.poetry]
name = "thaisperlho"
version = "0.1.0"
description = ""
authors = ["ThaisPerlho <carvalho.thais0301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^8.2.14"
mkdocs-video = "^1.3.0"
markdown-include = "^0.6.0"
mkdocs-glightbox = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
